--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "@material-ui/core": "^3.2.2",
+    "@material-ui/icons": "^3.0.1",
     "meteor-node-stubs": "^0.4.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-mounter": "^1.2.0",
+    "react-router-dom": "^4.3.1",
     "typeface-roboto": "0.0.54"
   },
   "meteor": {
